Closed Bug 566118 Opened 14 years ago Closed 14 years ago

[e10s] nsAppShell initialized earlier than QApplication

Categories

(Core Graveyard :: Widget: Qt, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: romaxa, Assigned: romaxa)

Details

Attachments

(1 file)

Not sure what exactly caused this problem (maybe bug 528146) or it was a problem  before...

Problem is so that nsAppShell created before TabChild::Init() in this case we have 

nsAppShell::ProcessNextNativeEvent call which is crashes on qApp->thread() call...

Problem easily reproducible with MOZ_DEBUG_CHILD_PROCESS=1 env.


#0  0xb5136686 in QObject::thread (this=0x0) at kernel/qobject.cpp:1414
#1  0xb7215e97 in nsAppShell::ProcessNextNativeEvent (this=0xb15fb880, mayWait=0)
    at mozilla/widget/src/qt/nsAppShell.cpp:108
#2  0xb7226af2 in nsBaseAppShell::DoProcessNextNativeEvent (this=0xb15fb888, mayWait=0)
    at mozilla/widget/src/xpwidgets/nsBaseAppShell.cpp:156
#3  0xb7226d8e in nsBaseAppShell::OnProcessNextEvent (this=0xb15fb888, thr=0xb2e27e20, mayWait=0, recursionDepth=0)
    at mozilla/widget/src/xpwidgets/nsBaseAppShell.cpp:294
#4  0xb73a26dd in nsThread::ProcessNextEvent (this=0xb2e27e20, mayWait=0, result=0xbf9e33c0)
    at mozilla/xpcom/threads/nsThread.cpp:508
#5  0xb7362109 in NS_ProcessNextEvent_P (thread=0x1, mayWait=0) at nsThreadUtils.cpp:250
#6  0xb7296121 in mozilla::ipc::MessagePump::Run (this=0xb2e2e070, aDelegate=0xbf9e3e0c)
    at mozilla/ipc/glue/MessagePump.cpp:118
#7  0xb7296249 in mozilla::ipc::MessagePumpForChildProcess::Run (this=0x0, aDelegate=0xbf9e3e0c)
    at mozilla/ipc/glue/MessagePump.cpp:232
---Type <return> to continue, or q <return> to quit---
#8  0xb73f6819 in MessageLoop::RunInternal (this=0xbf9e3e0c)
    at mozilla/ipc/chromium/src/base/message_loop.cc:216
#9  0xb73f684c in MessageLoop::RunHandler (this=0xbf9e3e0c)
    at mozilla/ipc/chromium/src/base/message_loop.cc:199
#10 0xb73f68da in MessageLoop::Run (this=0xbf9e3e0c)
    at mozilla/ipc/chromium/src/base/message_loop.cc:173
#11 0xb7226ef7 in nsBaseAppShell::Run (this=0xb15fb888)
    at mozilla/widget/src/xpwidgets/nsBaseAppShell.cpp:175
#12 0xb679de82 in XRE_RunAppShell ()
    at mozilla/toolkit/xre/nsEmbedFunctions.cpp:516
#13 0xb7296269 in mozilla::ipc::MessagePumpForChildProcess::Run (this=0x0, aDelegate=0xbf9e3e0c)
    at mozilla/ipc/glue/MessagePump.cpp:218
#14 0xb73f6819 in MessageLoop::RunInternal (this=0xbf9e3e0c)
    at mozilla/ipc/chromium/src/base/message_loop.cc:216
---Type <return> to continue, or q <return> to quit---
#15 0xb73f684c in MessageLoop::RunHandler (this=0xbf9e3e0c)
    at mozilla/ipc/chromium/src/base/message_loop.cc:199
#16 0xb73f68da in MessageLoop::Run (this=0xbf9e3e0c)
    at mozilla/ipc/chromium/src/base/message_loop.cc:173
#17 0xb679e319 in XRE_InitChildProcess (aArgc=2, aArgv=0xbf9e4004, aProcess=GeckoProcessType_Content)
    at mozilla/toolkit/xre/nsEmbedFunctions.cpp:397
#18 0x08048fcb in main (argc=Cannot access memory at address 0x1
)
    at mozilla/ipc/app/MozillaRuntimeMain.cpp:87
Summary: nsAppShell initialized earlier than QApplication → [e10s] nsAppShell initialized earlier than QApplication
after bug 528146 fixed, AppShell::Init() initialized in main thread...
Assignee: nobody → romaxa
Attachment #445534 - Flags: review?(dougt)
Attachment #445534 - Flags: review?(dougt) → review+
http://hg.mozilla.org/projects/electrolysis/rev/31cad27c0ee9
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: