Bug 566118 - nsAppShell initialized earlier than QApplication.