dom/ipc/TabChild.cpp
@@ -79,7 +79,6 @@
 #include <QX11EmbedWidget>
 #include <QGraphicsView>
 #include <QGraphicsWidget>
-#include "nsQAppInstance.h"
 #endif
 
 #ifdef MOZ_WIDGET_GTK2
@@ -113,9 +112,6 @@ TabChild::Init()
 {
 #ifdef MOZ_WIDGET_GTK2
   gtk_init(NULL, NULL);
-#endif
-#ifdef MOZ_WIDGET_QT
-  nsQAppInstance::AddRef();
 #endif
 
   nsCOMPtr<nsIWebBrowser> webBrowser = do_CreateInstance(NS_WEBBROWSER_CONTRACTID);
